--- a/index.html
+++ b/index.html
@@ -124,11 +124,9 @@
             color: #cc0000;
             font-size: 1.8em;
             text-transform: uppercase;
-            /* Добавляем свечение */
             text-shadow: 0 0 10px #ff0000, 0 0 20px #990000;
         }
 
-        /* Специальный заголовок для кармы (жёлтый) */
         .karma-header h3 {
             color: #ffaa00;
             text-shadow: 0 0 10px #ffaa00, 0 0 20px #b37400;
@@ -179,7 +177,6 @@
             text-overflow: ellipsis;
         }
 
-        /* Иконки внутри кнопок */
         .role-icon {
             width: 32px;
             height: 32px;
@@ -206,7 +203,7 @@
         }
 
         .role-button:hover .role-icon {
-            filter: brightness(0) invert(1); /* белая иконка */
+            filter: brightness(0) invert(1);
         }
 
         .role-button:active {
@@ -274,8 +271,6 @@
             text-shadow: 0 0 8px #ff0000;
         }
 
-        /* Больше нет блока #message, так как описание перенесено */
-
         .ttt-footer {
             text-align: center;
             padding: 15px;
@@ -284,6 +279,37 @@
             color: #888;
             font-size: 0.9em;
             margin-top: auto;
+        }
+
+        /* ===== Стилизация скроллбара (КРАСНЫЙ) ===== */
+        ::-webkit-scrollbar {
+            width: 12px;
+            height: 12px;
+        }
+
+        ::-webkit-scrollbar-track {
+            background: #1a1a1a;
+            border: 1px solid #cc0000;
+        }
+
+        ::-webkit-scrollbar-thumb {
+            background: #cc0000;
+            border-radius: 6px;
+            border: 2px solid #1a1a1a;
+        }
+
+        ::-webkit-scrollbar-thumb:hover {
+            background: #ff3333;
+        }
+
+        ::-webkit-scrollbar-corner {
+            background: #1a1a1a;
+        }
+
+        /* Для Firefox */
+        * {
+            scrollbar-width: thin;
+            scrollbar-color: #cc0000 #1a1a1a;
         }
 
         /* ===== Адаптация ===== */
@@ -436,8 +462,7 @@
         function showRolesModal() {
             hideAllModals();
             rolesModal.classList.add('active');
-            // Очищаем описание при открытии окна
-            roleDescriptionDiv.innerHTML = '';
+            roleDescriptionDiv.innerHTML = ''; // очищаем описание при открытии
         }
 
         function showControlsModal() {
@@ -464,7 +489,7 @@
             if (e.target === karmaModal) karmaModal.classList.remove('active');
         });
 
-        // Печатающийся текст (теперь в roleDescriptionDiv)
+        // Печатающийся текст
         let typingTimer = null;
 
         function stopTyping() {
@@ -476,7 +501,6 @@
 
         function typeRoleDescription(roleClass, title, body, speed = 25) {
             stopTyping();
-            // Очищаем и начинаем с цветного заголовка
             roleDescriptionDiv.innerHTML = `<span class="${roleClass}">${title}</span>: `;
             let i = 0;
             typingTimer = setInterval(() => {
@@ -511,30 +535,29 @@
             },
             clown: {
                 title: 'Clown',
-                body: 'это шут, цель которого — выжить достаточно долго, чтобы остались только он и одна команда.\n\nКогда команда должна была бы победить, Clown активируется, превращаясь в одиночку, и получает возможность устроить бойню и неожиданно победить.\n\nClown имеет доступ к магазину оружия, но только после активации.'
+                body: 'Роль Clown — это шут, цель которого — выжить достаточно долго, чтобы остались только он и одна команда.\n\nКогда команда должна была бы победить, Clown активируется, превращаясь в одиночку, и получает возможность устроить бойню и неожиданно победить.\n\nClown имеет доступ к магазину оружия, но только после активации.'
             },
             doctor: {
                 title: 'Doctor',
-                body: 'член команды невиновных, чья цель — лечить своих пациентов.\n\nИспользуйте магазин снаряжения, чтобы купить медпункт или лекарство от parasite, чтобы помогать проводить лечение.'
+                body: 'Роль Doctor — член команды невиновных, чья цель — лечить своих пациентов.\n\nИспользуйте магазин снаряжения, чтобы купить медпункт или лекарство от parasite, чтобы помогать проводить лечение.'
             },
             drunk: {
                 title: 'Drunk',
-                body: 'это одиночка, который не может точно вспомнить, к какой команде на самом деле принадлежит.\n\nЧерез некоторое время Drunk протрезвеет и вспомнит, какая у него роль.\n\nЕсли останется только одна команда, Drunk мгновенно протрезвеет и вспомнит, что он член проигравшей команды. Тогда его единственная цель — отомстить за своих павших товарищей.'
+                body: 'Роль Drunk — это одиночка, который не может точно вспомнить, к какой команде на самом деле принадлежит.\n\nЧерез некоторое время Drunk протрезвеет и вспомнит, какая у него роль.\n\nЕсли останется только одна команда, Drunk мгновенно протрезвеет и вспомнит, что он член проигравшей команды. Тогда его единственная цель — отомстить за своих павших товарищей.'
             },
             oldman: {
                 title: 'Old Man',
-                body: 'это одиночка, цель которого — просто выжить до конца раунда.\n\nЕсли Old Man получает достаточно урона, чтобы умереть, у него случается прилив адреналина, и он сопротивляется смерти в течение 5 секунд. Когда адреналин заканчивается, он умирает. Этого времени достаточно, чтобы Old Man мог отомстить своему убийце.\n\nВо время прилива адреналина Old Man получает двуствольный дробовик с двумя патронами, чтобы не оставаться безоружным.'
+                body: 'Роль Old Man — это одиночка, цель которого — просто выжить до конца раунда.\n\nЕсли Old Man получает достаточно урона, чтобы умереть, у него случается прилив адреналина, и он сопротивляется смерти в течение 5 секунд. Когда адреналин заканчивается, он умирает. Этого времени достаточно, чтобы Old Man мог отомстить своему убийце.\n\nВо время прилива адреналина Old Man получает двуствольный дробовик с двумя патронами, чтобы не оставаться безоружным.'
             },
             quack: {
                 title: 'Quack',
-                body: 'член команды предателей, цель которой — подражать Doctor и "лечить" своих пациентов... до смерти.\n\nИспользуй магазин снаряжения, чтобы купить бомбу-станцию или фальшивое лекарство от parasite, чтобы помогать проводить "лечение".'
+                body: 'Роль Quack — член команды предателей, цель которой — подражать Doctor и "лечить" своих пациентов... до смерти.\n\nИспользуй магазин снаряжения, чтобы купить бомбу-станцию или фальшивое лекарство от parasite, чтобы помогать проводить "лечение".'
             }
         };
 
         // Обработчики кнопок ролей
         document.getElementById('roleInnocent').addEventListener('click', () => {
             typeRoleDescription('role-innocent', roleData.innocent.title, roleData.innocent.body, 25);
-            // Не закрываем окно, чтобы видеть описание
         });
         document.getElementById('roleDoctor').addEventListener('click', () => {
             typeRoleDescription('role-doctor', roleData.doctor.title, roleData.doctor.body, 25);
