--- a/index.html
+++ b/index.html
@@ -52,6 +52,23 @@
             letter-spacing: 2px;
         }
 
+        /* Новое сообщение-предупреждение */
+        .warning-message {
+            font-size: 1.2em;
+            color: #ffaaaa;
+            background: rgba(0,0,0,0.6);
+            padding: 12px 20px;
+            border-radius: 8px;
+            border: 2px solid #cc0000;
+            margin: 20px auto 10px;
+            max-width: 800px;
+            width: 90%;
+            text-shadow: 0 0 8px #ff0000;
+            box-shadow: 0 0 15px rgba(204,0,0,0.5);
+            font-weight: bold;
+            letter-spacing: 1px;
+        }
+
         /* ===== Кнопки главного меню ===== */
         .main-menu {
             display: flex;
@@ -338,6 +355,10 @@
                 width: 28px;
                 height: 28px;
             }
+            .warning-message {
+                font-size: 1em;
+                padding: 10px;
+            }
         }
     </style>
 </head>
@@ -345,6 +366,10 @@
     <header class="ttt-header">
         <h1>TROUBLE IN TERRORIST TOWN</h1>
         <p>role & controls guide</p>
+        <!-- Добавленное предупреждение -->
+        <div class="warning-message">
+            ⚠️ ПРОШУ не закрывайте данное окно и прочитайте все 3 статьи для более приятной игры
+        </div>
     </header>
 
     <!-- Три основные кнопки -->
@@ -535,23 +560,23 @@
             },
             clown: {
                 title: 'Clown',
-                body: 'Роль Clown — это шут, цель которого — выжить достаточно долго, чтобы остались только он и одна команда.\n\nКогда команда должна была бы победить, Clown активируется, превращаясь в одиночку, и получает возможность устроить бойню и неожиданно победить.\n\nClown имеет доступ к магазину оружия, но только после активации.'
+                body: 'это шут, цель которого — выжить достаточно долго, чтобы остались только он и одна команда.\n\nКогда команда должна была бы победить, Clown активируется, превращаясь в одиночку, и получает возможность устроить бойню и неожиданно победить.\n\nClown имеет доступ к магазину оружия, но только после активации.'
             },
             doctor: {
                 title: 'Doctor',
-                body: 'Роль Doctor — член команды невиновных, чья цель — лечить своих пациентов.\n\nИспользуйте магазин снаряжения, чтобы купить медпункт или лекарство от parasite, чтобы помогать проводить лечение.'
+                body: 'член команды невиновных, чья цель — лечить своих пациентов.\n\nИспользуйте магазин снаряжения, чтобы купить медпункт или лекарство от parasite, чтобы помогать проводить лечение.'
             },
             drunk: {
                 title: 'Drunk',
-                body: 'Роль Drunk — это одиночка, который не может точно вспомнить, к какой команде на самом деле принадлежит.\n\nЧерез некоторое время Drunk протрезвеет и вспомнит, какая у него роль.\n\nЕсли останется только одна команда, Drunk мгновенно протрезвеет и вспомнит, что он член проигравшей команды. Тогда его единственная цель — отомстить за своих павших товарищей.'
+                body: 'это одиночка, который не может точно вспомнить, к какой команде на самом деле принадлежит.\n\nЧерез некоторое время Drunk протрезвеет и вспомнит, какая у него роль.\n\nЕсли останется только одна команда, Drunk мгновенно протрезвеет и вспомнит, что он член проигравшей команды. Тогда его единственная цель — отомстить за своих павших товарищей.'
             },
             oldman: {
                 title: 'Old Man',
-                body: 'Роль Old Man — это одиночка, цель которого — просто выжить до конца раунда.\n\nЕсли Old Man получает достаточно урона, чтобы умереть, у него случается прилив адреналина, и он сопротивляется смерти в течение 5 секунд. Когда адреналин заканчивается, он умирает. Этого времени достаточно, чтобы Old Man мог отомстить своему убийце.\n\nВо время прилива адреналина Old Man получает двуствольный дробовик с двумя патронами, чтобы не оставаться безоружным.'
+                body: 'это одиночка, цель которого — просто выжить до конца раунда.\n\nЕсли Old Man получает достаточно урона, чтобы умереть, у него случается прилив адреналина, и он сопротивляется смерти в течение 5 секунд. Когда адреналин заканчивается, он умирает. Этого времени достаточно, чтобы Old Man мог отомстить своему убийце.\n\nВо время прилива адреналина Old Man получает двуствольный дробовик с двумя патронами, чтобы не оставаться безоружным.'
             },
             quack: {
                 title: 'Quack',
-                body: 'Роль Quack — член команды предателей, цель которой — подражать Doctor и "лечить" своих пациентов... до смерти.\n\nИспользуй магазин снаряжения, чтобы купить бомбу-станцию или фальшивое лекарство от parasite, чтобы помогать проводить "лечение".'
+                body: 'член команды предателей, цель которой — подражать Doctor и "лечить" своих пациентов... до смерти.\n\nИспользуй магазин снаряжения, чтобы купить бомбу-станцию или фальшивое лекарство от parasite, чтобы помогать проводить "лечение".'
             }
         };
 
