--- a/index.html
+++ b/index.html
@@ -430,6 +430,7 @@
             <p><kbd>C</kbd> открывает меню снаряжения, если у вашей роли оно есть.</p>
             <p><kbd>B</kbd> — отправлять голосовые сообщения только предателям (Suit Zoom).</p>
             <p><kbd>F1</kbd> показывает это меню (Помощь и настройки).</p>
+            <p><kbd>F3</kbd> показывает меню кастомизации.</p>
             <p><kbd>N</kbd> открывает меню радиокоманд.</p>
             <p><kbd>SHIFT</kbd> позволяет вам бежать, пока есть выносливость.</p>
         </div>
