--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
             <button class="close-btn" id="closeKarma">&times;</button>
         </div>
         <div class="karma-text">
-            Ваша Карма начинается с 1000 и уменьшается, если вы наносите урон игрокам своей команды. Урон карме меньше, если их карма ниже.<br><br>
+            Ваша Карма начинается с 100% и уменьшается, если вы наносите урон игрокам своей команды. Становиться меньше, если карма ниже.<br><br>
             Если в начале раунда у вас низкая карма, вы получаете штраф к урону от оружия в этом раунде.<br><br>
             Играя чистые раунды, в которых вы не вредите товарищам, вы восстанавливаете карму. Некоторые роли также получают карму за урон врагам.<br><br>
             Значение кармы, отображаемое в таблице счёта, обновляется только после окончания раунда. Во время раунда истинная карма игрока может быть ниже.
