--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
             },
             oldman: {
                 title: 'Old Man',
-                body: 'это одиночка, цель которого — просто выжить до конца раунда.\n\nЕсли Old Man получает достаточно урона, чтобы умереть, у него случается прилив адреналина, и он сопротивляется смерти в течение 5 секунд. Когда адреналин заканчивается, он умирает. Этого времени достаточно, чтобы Old Man мог отомстить своему убийце.\n\nВо время прилива адреналина Old Man получает двуствольный дробовик с двумя патронами, чтобы не оставаться безоружным.'
+                body: 'это одиночка, цель которого — просто выжить до пенсии.\n\nЕсли Old Man получает достаточно урона, чтобы умереть, у него случается прилив адреналина, и он сопротивляется смерти в течение 5 секунд. Когда адреналин заканчивается, он умирает. Этого времени достаточно, чтобы Old Man мог отомстить своему убийце.\n\nВо время прилива адреналина Old Man получает двуствольный дробовик с двумя патронами, чтобы не оставаться безоружным.'
             },
             quack: {
                 title: 'Quack',
